# nickyspatial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  example.ipynb  main.py  mkdocs.yml  pyproject.toml  streamlit.py  test.py
.github/workflows/: docker-image-publish.yaml  docs.yaml  publish.yaml  tests.yaml
data/: test_image.tif  test_image.tif.aux.xml
docs/: dev.md  reference.md
docs/examples/: simple_usecase.ipynb  supervised_classification.ipynb
examples/: simple_usecase.ipynb
nickyspatial/: __init__.py
nickyspatial/core/: __init__.py  classifier.py  layer.py  rules.py  segmentation.py  supervised_classification.py
nickyspatial/filters/: __init__.py  spatial.py  spectral.py
nickyspatial/io/: __init__.py  raster.py  vector.py
nickyspatial/stats/: __init__.py  basic.py  spatial.py  spectral.py
nickyspatial/utils/: __init__.py  helpers.py
nickyspatial/viz/: __init__.py  charts.py  maps.py
tests/: test_app.py
