[project]
name = "nickyspatial"
version = "0.0.1"
description = "An open-source object-based image analysis package for remote sensing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "numexpr>=2.10.2",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
]
