[project]
name = "nickyspatial"
version = "0.0.2"
description = "An open-source object-based image analysis library for remote sensing."
readme = "README.md"
authors = [
    {name = "Kshitij Raj Sharma", email = "krschap@duck.com"},
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["remote-sensing", "obia", "object", "segmentation"]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "numexpr>=2.10.2",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[project.urls]
documentation = "https://kshitijrajsharma.github.io/nickyspatial"
repository = "https://github.com/kshitijrajsharma/nickyspatial"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "nickyspatial/__init__.py:__version__",
]

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "nickyspatial/__init__.py",
]

[tool.ruff.lint]
select = ["I", "E", "W", "B", "F", "N", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "google"
